prevent line wrapping of description

--- a/assets/js/components/List/List.less
+++ b/assets/js/components/List/List.less
@@ -1,7 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
 @import url(https://fonts.googleapis.com/css?family=Arapey);
+
 #list-component
 {
+
+	#top-header {
+		max-width: 900px!important;
+	}
+
 	font-family: Lato;
 
 	.masthead.segment {
@@ -20,6 +26,7 @@
 		font-size: 3.5em;
 		font-weight: normal;
 	}
+
 	.masthead h2 {
 		font-size: 1.5em;
 		font-weight: normal;
